plugins {
    id 'java'
}

version '1.4'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['driver/src/main/java']
        }
        resources {
            srcDirs = ['driver/src/main/resources']
        }
    }
    test {
        java {
            srcDirs = ['driver/src/test']
        }
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation group: 'redis.clients', name: 'jedis', version: '4.3.2'
    implementation group: 'org.json', name: 'json', version: '20230618'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
}

jar {
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}
targetCompatibility = 1.8
